--- a/styles.css
+++ b/styles.css
@@ -2,53 +2,101 @@
     box-sizing: border-box;
   }
   
-  body {
-    margin: 0;
-    font-family: Arial;
+  /* Position the image container (needed to position the left and right arrows) */
+  .container {
+    position: relative;
   }
   
-  .header {
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+  }
+  
+  /* Add a pointer when hovering over the thumbnail images */
+  .cursor {
+    cursor: pointer;
+  }
+  
+  /* Next & previous buttons */
+  .prev,
+  .next {
+    cursor: pointer;
+    position: absolute;
+    top: 40%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover,
+  .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* Container for image text */
+  .caption-container {
     text-align: center;
-    padding: 32px;
+    background-color: #222;
+    padding: 2px 16px;
+    color: white;
   }
   
-  .row {
-    display: -ms-flexbox; /* IE10 */
-    display: flex;
-    -ms-flex-wrap: wrap; /* IE10 */
-    flex-wrap: wrap;
-    padding: 0 4px;
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
   }
   
-  /* Create four equal columns that sits next to each other */
+  /* Six columns side by side */
   .column {
-    -ms-flex: 25%; /* IE10 */
-    flex: 25%;
-    max-width: 25%;
-    padding: 0 4px;
+    float: left;
+    width: 16.66%;
   }
   
-  .column img {
-    margin-top: 8px;
-    vertical-align: middle;
+  /* Add a transparency effect for thumnbail images */
+  .demo {
+    opacity: 0.6;
+    height: 100px;
+    width: 100px;
+    object-fit: cover;
     width: 100%;
   }
-
   
-  /* Responsive layout - makes a two column-layout instead of four columns */
-  @media screen and (max-width: 800px) {
-    .column {
-      -ms-flex: 50%;
-      flex: 50%;
-      max-width: 50%;
-    }
+  .active,
+  .demo:hover {
+    opacity: 1;
   }
-  
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .column {
-      -ms-flex: 100%;
-      flex: 100%;
-      max-width: 100%;
-    }
+
+  .slaid{
+    width: 100%;
+    max-width: 2000px;
+    max-height: 1000px;
+    object-fit: cover;
+    display: block;
+  }
+
+  .img{
+    width:100%
   }
