--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
   /* Hide the images by default */
   .mySlides {
     display: none;
+    position: center;
   }
   
   /* Add a pointer when hovering over the thumbnail images */
@@ -22,13 +23,13 @@
   .next {
     cursor: pointer;
     position: absolute;
-    top: 40%;
+    top: 30%;
     width: auto;
     padding: 16px;
     margin-top: -50px;
-    color: white;
+    color: black;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 40px;
     border-radius: 0 3px 3px 0;
     user-select: none;
     -webkit-user-select: none;
@@ -43,17 +44,9 @@
   /* On hover, add a black background color with a little bit see-through */
   .prev:hover,
   .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(167, 155, 155, 0.8);
   }
-  
-  /* Number text (1/3 etc) */
-  .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-  }
+
   
   /* Container for image text */
   .caption-container {
@@ -78,7 +71,7 @@
   /* Add a transparency effect for thumnbail images */
   .demo {
     opacity: 0.6;
-    height: 100px;
+    height: 200px;
     width: 100px;
     object-fit: cover;
     width: 100%;
@@ -91,10 +84,11 @@
 
   .slaid{
     width: 100%;
-    max-width: 2000px;
+    max-width: 1000px;
     max-height: 1000px;
     object-fit: cover;
     display: block;
+
   }
 
   .img{
