--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Allikas: https://www.w3schools.com/howto/howto_js_slideshow_gallery.asp *\
 * {
     box-sizing: border-box;
   }
@@ -5,16 +6,12 @@
   /* Position the image container (needed to position the left and right arrows) */
   .container {
     position: relative;
-
-   
   }
   
   /* Hide the images by default */
   .mySlides {
     display: none;
-    margin: auto;
-    width: 30%;
-   
+    position: center;
   }
   
   /* Add a pointer when hovering over the thumbnail images */
@@ -90,10 +87,12 @@
     width: 100%;
     max-width: 1000px;
     max-height: 1000px;
+    object-fit: cover;
+    display: block;
+
   }
 
   .img{
-    width:100%;
+    width:100%
   }
-
   
