--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Allikas: https://www.w3schools.com/howto/howto_js_slideshow_gallery.asp *\
+/* Allikas: https://www.w3schools.com/howto/howto_js_slideshow_gallery.asp */
 * {
     box-sizing: border-box;
   }
