--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
+    padding: 20px;
 }
 
 .thumbnail {
@@ -67,4 +68,56 @@
 
     /* Add space below the navigation menu */
     margin-bottom: 20px; /* Adjust the value as needed */
+    background-color: #DBC1AD;
+    border: 2px solid #928490;
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+#nav-menu a {
+    text-decoration: none;
+    color: #433E49;
+    margin: 0 10px;
+    position: relative; 
+}
+
+#nav-menu a::before {
+    content: ''; /* Create an empty pseudo-element */
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px; /* Height of the border */
+    background-color: transparent; /* Transparent initially */
+    transition: background-color 0.3s ease; /* Smooth color transition on hover */
+}
+
+#nav-menu a:hover::before {
+    background-color: #433E49; /* Change border color on hover */
+}
+
+.font { 
+    font-family: 'Oswald', sans-serif;
+}
+
+body {
+    color: #433E49;
+    background: linear-gradient(to bottom, #F3E8EB, #E6D3D6);
+}
+
+#h1 {
+    background-color: #DBC1AD;
+    text-align: center;
+    border: 2px solid #928490;
+    padding: 10px;
+}
+
+#full-image {
+    max-width: 100%;
+    margin-bottom: 10px;
+    max-height: 600px;
+    border-radius: 8px;
+}
+
