--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 .arrow {
     font-size: 2em;
     cursor: pointer;
-    color: black;
+    color: #1B4965;
     position: fixed;
     top: 50%;
     transform: translateY(-50%);
@@ -52,7 +52,7 @@
 }
 
 .arrow:hover{
-    background-color: rgba(176, 150, 150, 0.799);
+    background-color: #76b6de;
 }
 
 #left-arrow {
@@ -63,27 +63,42 @@
     right: 10px;
 }
 
-#nav-menu {
+.nav-menu {
     /* Your existing styles for the navigation menu */
 
     /* Add space below the navigation menu */
     margin-bottom: 20px; /* Adjust the value as needed */
-    background-color: #DBC1AD;
-    border: 2px solid #928490;
     padding: 15px;
     display: flex;
     justify-content: center;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px #1B4965;
+    background: #CAE9FF;
+    font-family: 'Abril Fatface', cursive;
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: bold;
+    color: #1B4965;
+    padding: 40px;
+    box-shadow:
+    inset #1B4965 0 0 0 5px, 
+    inset #225270 0 0 0 1px, 
+    inset #306f96 0 0 0 10px, 
+    inset #306f96 0 0 0 11px, 
+    inset #76b6de 0 0 0 16px, 
+    inset #76b6de 0 0 0 17px, 
+    inset #e5f9f7 0 0 0 21px, 
+    inset #bfecf7 0 0 0 22px;
+    text-shadow: 3px 3px 1px #98c9e6;
 }
 
-#nav-menu a {
+.nav-menu a {
     text-decoration: none;
-    color: #433E49;
-    margin: 0 10px;
-    position: relative; 
+    color: #1B4965;
+    margin: 0 20px;
+    position: relative;
 }
 
-#nav-menu a::before {
+.nav-menu a::before {
     content: ''; /* Create an empty pseudo-element */
     position: absolute;
     bottom: 0;
@@ -94,8 +109,8 @@
     transition: background-color 0.3s ease; /* Smooth color transition on hover */
 }
 
-#nav-menu a:hover::before {
-    background-color: #433E49; /* Change border color on hover */
+.nav-menu a:hover::before {
+    background-color: #1b4965; /* Change border color on hover */
 }
 
 .font { 
@@ -103,21 +118,215 @@
 }
 
 body {
-    color: #433E49;
-    background: linear-gradient(to bottom, #F3E8EB, #E6D3D6);
+    color: #1b4965;
+    background: #CAE9FF
 }
 
-#h1 {
-    background-color: #DBC1AD;
+.h1 {
     text-align: center;
-    border: 2px solid #928490;
     padding: 10px;
+    -moz-box-shadow: 1px 2px 5px rgba(0,0,0,.5);
+    -webkit-box-shadow: 1px 2px 5px rgba(0,0,0,.5);
+    box-shadow: 1px 2px 5px rgba(0,0,0,.5);
+    
+    /*https://codepen.io/HighFlyer/pen/QWmwBaG?editors=1100*/
+    background: #CAE9FF;
+    font-family: 'Abril Fatface', cursive;
+    font-size: 48px;
+    line-height: 40px;
+    font-weight: bold;
+    color: #1b4965;
+    padding: 40px;
+    box-shadow:
+        inset #1B4965 0 0 0 5px, 
+      inset #225270 0 0 0 1px, 
+      inset #306f96 0 0 0 10px, 
+      inset #306f96 0 0 0 11px, 
+      inset #76b6de 0 0 0 16px, 
+      inset #76b6de 0 0 0 17px, 
+      inset #e5f9f7 0 0 0 21px, 
+      inset #bfecf7 0 0 0 22px;
+    text-shadow: 3px 3px 1px #98c9e6;
+}
+
+#pl {
+    max-width: 500px;
+    margin: 20px auto 20px auto;
+}
+
+.tekst {
+    /*https://codepen.io/HighFlyer/pen/QWmwBaG?editors=1100*/
+    font-weight: bold;
+    color: #1b4965;
+    padding: 40px;
+    box-shadow:
+        inset #1B4965 0 0 0 5px, 
+      inset #225270 0 0 0 1px, 
+      inset #306f96 0 0 0 10px, 
+      inset #306f96 0 0 0 11px, 
+      inset #76b6de 0 0 0 16px, 
+      inset #76b6de 0 0 0 17px, 
+      inset #e5f9f7 0 0 0 21px, 
+      inset #bfecf7 0 0 0 22px;
+      text-shadow: 3px 3px 1px #bfecf7;
 }
 
 #full-image {
     max-width: 100%;
     margin-bottom: 10px;
     max-height: 600px;
+    border: 5px solid #1B4965;
     border-radius: 8px;
+    
 }
 
+/*Pealehe style*/
+/* Allikas: https://www.w3schools.com/howto/howto_js_slideshow_gallery.asp */
+* {
+    box-sizing: border-box;
+  }
+  
+  /* Position the image container (needed to position the left and right arrows) */
+  .container {
+    position: relative;
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+    margin: auto;
+    width: 30%;
+  }
+  
+  /* Add a pointer when hovering over the thumbnail images */
+  .cursor {
+    cursor: pointer;
+  }
+  
+  /* Next & previous buttons */
+  .prev,
+  .next {
+    cursor: pointer;
+    position: absolute;
+    top: 30%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: black;
+    font-weight: bold;
+    font-size: 40px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover,
+  .next:hover {
+    background-color: rgba(167, 155, 155, 0.8);
+  }
+
+  
+  /* Container for image text */
+  .caption-container {
+    text-align: center;
+    background-color: #222;
+    padding: 2px 16px;
+    color: white;
+  }
+  
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Six columns side by side */
+  .column {
+    float: left;
+    width: 16.66%;
+  }
+  
+  /* Add a transparency effect for thumnbail images */
+  .demo {
+    opacity: 0.6;
+    height: 200px;
+    width: 100px;
+    object-fit: cover;
+    width: 100%;
+  }
+  
+  .active,
+  .demo:hover {
+    opacity: 1;
+  }
+
+  .slaid{
+    width: 100%;
+    max-width: 1000px;
+    max-height: 1000px;
+    object-fit: cover;
+    display: block;
+
+  }
+
+  .img{
+    width:100%
+  }
+
+  body, html {
+    height: 100%;
+    margin: 0;
+    font-family: 'Abril Fatface', cursive;
+    font-size: 16px;
+    color: #333;
+  }
+  
+  .bgimg-1, .bgimg-2, .bgimg-3 {
+    position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .bgimg-1 {
+    background-image: url("Pildid/Pealehe_pilt.png");
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+  }
+  
+  .caption {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 100%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #000;
+    font-family: "Oswald", sans-serif;
+    font-size: 36px;
+  }
+  
+  .caption span.border {
+    background-color: #111;
+    color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    font-size: 25px;
+    letter-spacing: 10px;
+  }
+  
+  h3 {
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    font: 20px "Lato", sans-serif;
+    color: #111;
+  }
